Sutter Health/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_Remit_to_Code__c</fullName>
        <label>AP Remit to Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Broker_Firm_Remittance_Type__c</fullName>
        <label>Broker Firm Remittance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Broker_Firm_Vendor_ID__c</fullName>
        <label>Lawson ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_External_ID1__c</fullName>
        <description>External ID used to match an account record to its equivalent record in a source system when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Account External ID 1</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_External_ID2__c</fullName>
        <description>External ID used to match an account record to its equivalent record in a source system when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Account External ID 2</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_External_ID3__c</fullName>
        <label>Account External ID 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Type__c</fullName>
        <label>Account Group Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_County__c</fullName>
        <label>Shipping County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_TIN_Type__c</fullName>
        <label>Account TIN Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>Tax-ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Accounts</fullName>
                </value>
                <value>
                    <fullName>Affiliate Projects</fullName>
                </value>
                <value>
                    <fullName>Meaningful Accounts</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Financially__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Project__c</fullName>
        <label>Affiliate Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area Project 1</fullName>
                </value>
                <value>
                    <fullName>Bay Area Project 2</fullName>
                </value>
                <value>
                    <fullName>Bay Area Project 3</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 1</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 2</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliates__c</fullName>
        <label>Affiliates</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sutter Amador Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Auburn Faith Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Davis Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center, Sacramento</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter North Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Regional Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Roseville Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Solano Medical Center</fullName>
                </value>
                <value>
                    <fullName>Memorial Hospital Los Banos</fullName>
                </value>
                <value>
                    <fullName>Memorial Medical Center Modesto</fullName>
                </value>
                <value>
                    <fullName>Sutter Gould Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Tracy Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Menlo Park Surgical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mills-Peninsula Health Services</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation - PCR</fullName>
                </value>
                <value>
                    <fullName>Sutter Maternity and Surgery Center of Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation - SC</fullName>
                </value>
                <value>
                    <fullName>Alta Bates Summit Medical Center</fullName>
                </value>
                <value>
                    <fullName>Eden Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Delta Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter East Bay Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation – EBR</fullName>
                </value>
                <value>
                    <fullName>California Pacific Medical Center</fullName>
                </value>
                <value>
                    <fullName>Novato Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Lakeside Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center of Santa Rosa</fullName>
                </value>
                <value>
                    <fullName>Sutter Pacific Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Pacific Medical Foundation - Sonoma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) OR (1 AND 2 AND 6)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. Field- Account Broker Contact</errorMessage>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Broker__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.License_Number__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>SHMMN Broker, SHP Sales Broker Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Firm_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Broker Firm HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Firm_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Broker Firm HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Firm_Sales_Team__c</fullName>
        <label>Broker Firm Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAY</fullName>
                </value>
                <value>
                    <fullName>M2N</fullName>
                </value>
                <value>
                    <fullName>PBJ</fullName>
                </value>
                <value>
                    <fullName>RGA</fullName>
                </value>
                <value>
                    <fullName>SHMMN</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>SPLIT</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Rep_Owner__c</fullName>
        <formula>Broker_Rep__r.Owner.FirstName +  Broker_Rep__r.Owner.LastName</formula>
        <label>Broker Rep Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.Field- Account Broker Rep</errorMessage>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN, System Administrator, Integration</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>SHMMN Broker, SHP Sales Broker Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHP,Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Rep_last_Contact__c</fullName>
        <description>Shows the Last contacted by broke Rep</description>
        <formula>Broker_Rep__r.Broker_Last_Contacted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Rep Last Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Broker_Type__c</fullName>
        <label>Broker Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employers</relationshipLabel>
        <relationshipName>Employers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Pass_Archive_Contact_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to by pass the archive error when the account is getting updated from SCN / Opportunity</description>
        <label>By Pass Archive Contact Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Find_Event__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Call Find Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calpers_Details__c</fullName>
        <label>Calpers Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Employer_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Financially__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan Information Request</fullName>
                </value>
                <value>
                    <fullName>Lead / Opportunity Out reach</fullName>
                </value>
                <value>
                    <fullName>RFP Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Group_Number__c</fullName>
        <label>Contact / Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Opportunities_Created__c</fullName>
        <label>Count of Opportunities Created</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SHMMN Opportunity, SHP Sales Opportunity</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>County_Percent_Rollup__c</fullName>
        <label>County Percent Rollup</label>
        <summarizedField>Account_Employee_Distribution__c.County_Percent__c</summarizedField>
        <summaryForeignKey>Account_Employee_Distribution__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Status__c</fullName>
        <label>Dependent Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked indicates this is a duplicate account</description>
        <inlineHelpText>When checked, it indicates this as a duplicate account.</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Financially__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Account_Type__c</fullName>
        <description>Employer Account Type</description>
        <inlineHelpText>Employer Account Type</inlineHelpText>
        <label>Employer Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Benefit_Plan_Date_End__c</fullName>
        <label>Employer Benefit Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Benefit_Plan_Date_Start__c</fullName>
        <label>Employer Benefit Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Benefit_Plan_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Employer Benefit Plan HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Benefit_Plan_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Employer Benefit Plan HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Benefit_Plan_Name__c</fullName>
        <description>Name of the benefit plan that was sold to a specific employer.</description>
        <label>Employer Benefit Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Broker_Agent_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Broker Agent HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Broker_Agent_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Broker Agent HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Broker_Agent_Telephone_Number__c</fullName>
        <label>Broker Agent Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Broker_Name_First__c</fullName>
        <label>Employer Broker First Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Broker_Name_Last__c</fullName>
        <label>Employer Broker Last Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_First_Active_Date__c</fullName>
        <description>Employer First Active Date</description>
        <inlineHelpText>Employer First Active Date</inlineHelpText>
        <label>Employer First Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_First_Renewal_Date__c</fullName>
        <description>Employer First Renewal Date</description>
        <inlineHelpText>Employer First Renewal Date</inlineHelpText>
        <label>Employer First Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Employer HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Employer HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Industry_Classification__c</fullName>
        <description>Employer Industry Classification</description>
        <inlineHelpText>Employer Industry Classification</inlineHelpText>
        <label>Employer Industry Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Next_Renewal_Date__c</fullName>
        <description>Employer Next Renewal Date</description>
        <inlineHelpText>Employer Next Renewal Date</inlineHelpText>
        <label>Employer Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_SFDC_ID__c</fullName>
        <label>Employer SFDC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Status_HR__c</fullName>
        <label>Employer Status HR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Status__c</fullName>
        <label>Employer Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Tax_ID__c</fullName>
        <description>Employer Tax ID</description>
        <inlineHelpText>Employer Tax ID</inlineHelpText>
        <label>Employer Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <label>Employer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calpers</fullName>
                </value>
                <value>
                    <fullName>Jumbo (&gt;1000)</fullName>
                </value>
                <value>
                    <fullName>Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Labor and Trust</fullName>
                </value>
                <value>
                    <fullName>Large Group (251-1000)</fullName>
                </value>
                <value>
                    <fullName>Large Mid-Market Group (101 - 250)</fullName>
                </value>
                <value>
                    <fullName>Mid-Market Group (51-250)</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Small Group (1 - 50)</fullName>
                </value>
                <value>
                    <fullName>Small Group (2-50)</fullName>
                </value>
                <value>
                    <fullName>Small Mid-Market Group (51 - 100)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Date__c</fullName>
        <label>First Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formerly__c</fullName>
        <label>Formerly</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIPAA_Agreement_Date__c</fullName>
        <label>HIPAA Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthRules_ID__c</fullName>
        <externalId>true</externalId>
        <label>HealthRules HCC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inactive_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Broker__c</fullName>
        <label>Key Broker</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Broker_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHP Sales Broker</fullName>
                </value>
                <value>
                    <fullName>SHP Sales Employer</fullName>
                </value>
                <value>
                    <fullName>SHP Sales Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>MI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Interest__c</fullName>
        <label>Market Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Action Plan</fullName>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Etips</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>Flu Clinic</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness Screening Committee</fullName>
                </value>
                <value>
                    <fullName>Health Coaching</fullName>
                </value>
                <value>
                    <fullName>Health Fairs</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>LWFL Program</fullName>
                </value>
                <value>
                    <fullName>Mobile Clinic</fullName>
                </value>
                <value>
                    <fullName>Occupational Health</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinics</fullName>
                </value>
                <value>
                    <fullName>Onsite lectures</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Participation</fullName>
                </value>
                <value>
                    <fullName>PEP Product</fullName>
                </value>
                <value>
                    <fullName>Quarterly Newsletter</fullName>
                </value>
                <value>
                    <fullName>Service Line promotion</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Sutter Care At Home</fullName>
                </value>
                <value>
                    <fullName>Sutter Health Plus (SHP)</fullName>
                </value>
                <value>
                    <fullName>Tele-Medicine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_and_Sales_Primary_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing and Sales Primary Contact Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>